@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2024-12-13T12:35:54Z",
-  "count_outdated" : 4558,
-  "uniques_outdated" : 2307,
+  "timestamp" : "2024-12-17T01:24:28Z",
+  "count_outdated" : 4561,
+  "uniques_outdated" : 2310,
   "count" : 4568,
   "uniques" : 2317,
   "clones" : [
-    {
-      "timestamp": "2024-12-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
-      "timestamp": "2024-12-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-12-08T00:00:00Z",
       "count": 1,
