@@ -1,17 +1,7 @@
 {
-  "count": 10,
-  "uniques": 9,
+  "count": 7,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2024-12-02T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2024-12-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-12-08T00:00:00Z",
       "count": 1,
