@@ -1,3 +1,12 @@
+2024-12-17T01:24:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12364505127 # 714
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-17
+* notice: last 14d: unq all: 7 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 2307 4558 / 2317 4568
+* notice: next accum: outdated-unq outdated-all / unq all: 2310 4561 / 2317 4568
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-12-02 2024-12-03] / []
+
 2024-12-13T12:35:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12315759451 # 707
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-13
